Use Next Gene Code Generator

--- a/.github/workflows/seq-icc.yml
+++ b/.github/workflows/seq-icc.yml
@@ -33,10 +33,8 @@ jobs:
         export CXX="icpc"
         cd /home/runner/work/SeqMap/SeqMap/
         icpc --version
-        icx --version
-        icpx --version
-        icpx -qnextgen -flto -Ofast -m64 -o seqmap match.cpp
-        icpx -qnextgen -flto -Ofast -m64 -o collect_output collect_output.cpp
+        icpc -qnextgen -flto -Ofast -m64 -o seqmap match.cpp
+        icpc -qnextgen -flto -Ofast -m64 -o collect_output collect_output.cpp
     - name: Where am I
       run: pwd
     - name: Prepare probe fasta 
