--- a/.github/workflows/seq-icc.yml
+++ b/.github/workflows/seq-icc.yml
@@ -55,8 +55,14 @@ jobs:
         ls
         /home/runner/work/SeqMap/SeqMap/seqmap 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results_a.txt /eland:3 /available_memory:300000 /output_all_matches
         /home/runner/work/SeqMap/SeqMap/seqmap_icc 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results_b.txt /eland:3 /available_memory:300000 /output_all_matches
-        md5sum results_a.txt > a_md5.txt
-        md5sum results_b.txt > b_md5.txt
-        diff a_md5.txt b_md5.txt
-        ls
-        
+        mkdir icc
+        mv results_a.txt results_b.txt seqmap collect_output seqmap_icc co_icc icc/
+        tar -I zstd -cf seqmap.tar.zst icc/
+    - name: Upload Binaries to Release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: /home/runner/work/SeqMap/seqmap.tar.zst
+        tag: nextgen
+        overwrite: true
+        file_glob: true
